--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.3.1",
     "classnames": "^2.3.2",
     "d3-scale-chromatic": "^3.0.0",
+    "js-cookie": "^3.0.1",
     "overlayscrollbars-react": "^0.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
